package io.github.revNrun.revNrun.model.car.components;

public enum CarAxis {
    FRONT,
    REAR,
}

