package io.github.revNrun.revNrun.model.car.components;

public enum CarSides {
    LEFT,
    RIGHT
}
