package io.github.revNrun.revNrun.model.car.components;

public enum EffectType {
    GRIP,
    MAX_SPEED,
    ACCELERATION,
    BRAKE
}
