@startuml
skinparam classAttributeIconSize 0
skinparam groupInheritance 2
skinparam linetype ortho
skinparam linetype polyline

package model {
    package car {
        class Car {

        }

        package components {
            package enums {
                enum EffectType {
                    GRIP
                    MAX_SPEED
                    ACCELERATION
                    BRAKE
                }

                enum CarAxis {
                    FRONT
                    REAR
                }

                enum CarSides {
                    LEFT
                    RIGHT
                }
            }

            interface Component {
            }

            abstract class AbstractComponent implements Component {

            }

            abstract class WheelMountedComponent extends AbstractComponent {

            }

            class Back extends AbstractComponent {

            }

            class Chassis extends AbstractComponent {

            }

            class Engine extends AbstractComponent {

            }

            class Floor extends AbstractComponent {

            }

            class Front extends AbstractComponent {

            }

            class Sides extends AbstractComponent {

            }

            class Suspension extends WheelMountedComponent {

            }

            class Tires extends WheelMountedComponent {

            }

            class Brakes extends WheelMountedComponent {

            }

            class Effect {

            }
        }
    }



    Car *--> "1" Back : back
    Car *--> "1" Chassis : chassis
    Car *--> "1" Engine : engine
    Car *--> "1" Floor : floor
    Car *--> "1" Front : front
    Car *--> "1" Sides : sides
    Car *--> "4" Brakes : brakes
    Car *--> "4" Suspension : suspension
    Car *--> "4" Tires : tires

    AbstractComponent o-right-> "0..*" Effect : effects
}
@enduml